deployment/k8s-base-layer-deployment.yaml
###################################
# users api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi
  labels:
    app: usersapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersapi
  template:
    metadata:
      labels:
        app: usersapi
    spec:
      containers:
        - name: usersapi
          image: us-central1-docker.pkg.dev/miso-modernizacion-2025/miso-modernizacion/users-ms:1.0.1
          resources:
            requests:
              memory: "65Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "128m"
          ports:
            - containerPort: 3005
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: usersapi-service
  annotations:
    cloud.google.com/backend-config: '{"default": "usersapi-config"}'
spec:
  type: NodePort
  selector:
    app: usersapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
      nodePort: 31019
---

###################################
# exercises api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercisesapi
  labels:
    app: exercisesapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercisesapi
  template:
    metadata:
      labels:
        app: exercisesapi
    spec:
      containers:
        - name: exercisesapi
          image: us-central1-docker.pkg.dev/miso-modernizacion-2025/miso-modernizacion/exercises-ms:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "128m"
          ports:
            - containerPort: 3006
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: exercisesapi-service
  annotations:
    cloud.google.com/backend-config: '{"default": "exercisesapi-config"}'
spec:
  type: NodePort
  selector:
    app: exercisesapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
      nodePort: 31020
---

###################################
# web
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: us-central1-docker.pkg.dev/miso-modernizacion-2025/miso-modernizacion/web:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "320m"
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: web-service
  annotations:
    cloud.google.com/backend-config: '{"default": "web-config"}'
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31050
---
